2_network.tf
# Virtual Network
resource "azurerm_virtual_network" "weight_app_network" {
  address_space       = ["10.0.0.0/16"] 
  location            = var.location
  name                = "${var.prefix}_network"
  resource_group_name = azurerm_resource_group.weight-app.name
}

# Private subnet
resource "azurerm_subnet" "backend_subnet" {
  address_prefixes     = ["10.0.0.0/26"] 
  name                 = "backendSubnet"
  resource_group_name  = azurerm_resource_group.weight-app.name
  virtual_network_name = azurerm_virtual_network.weight_app_network.name

delegation {
    name = "dbSubConection"
    service_delegation {
      name    = "Microsoft.DBforPostgreSQL/flexibleServers"
      actions = ["Microsoft.Network/virtualNetworks/subnets/join/action"]
    }
  }

  depends_on = [azurerm_resource_group.weight-app]
}

# Frontend subnet
resource "azurerm_subnet" "frontend_subnet" {
  address_prefixes     = ["10.0.20.0/26"]
  name                 = "frontendSubnet"
  resource_group_name  = azurerm_resource_group.weight-app.name
  virtual_network_name = azurerm_virtual_network.weight_app_network.name

  depends_on =  [azurerm_resource_group.weight-app]
}



# Provide each macine with a nic
resource "azurerm_network_interface" "nics" {
  count               = "${var.TF_VAR_machines}"

  name                = "${var.pool_name}-${count.index}"
  location            = var.location
  resource_group_name  = azurerm_resource_group.weight-app.name
#  virtual_network_name = azurerm_virtual_network.weight-app_network.name

  ip_configuration {
## {{dynamic variable connection}}
    name                          = "${var.pool_name}-${count.index}"
    subnet_id                     = azurerm_subnet.frontend_subnet.id
    private_ip_address_allocation = "Dynamic"

  }

  depends_on = [
    azurerm_resource_group.weight-app,
    azurerm_subnet.frontend_subnet
  ]
}
